Update readme to include how to use leaderboard app